corrige mascaramento de documento e placa